--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,10 @@
 
     <uses-feature android:name="android.hardware.type.watch" />
 
-<!--    TODO: FIND A WAY TO TEST HEALTH DATA-->
-<!--    <uses-permission android:name="android.permission.health.READ_HEART_RATE"/>-->
-<!--    <uses-permission android:name="android.permission.health.WRITE_HEART_RATE"/>-->
-<!--    <uses-permission android:name="android.permission.health.READ_STEPS"/>-->
-<!--    <uses-permission android:name="android.permission.health.WRITE_STEPS"/>-->
+    <uses-permission android:name="android.permission.BODY_SENSORS" />
+    <uses-permission android:name="android.permission.HEALTH_CONNECT" />
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.READ_HEART_RATE_DATA" />
 
     <application
         android:allowBackup="true"
@@ -40,7 +39,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
+
+    <queries>
+        <package android:name="com.google.android.apps.healthdata" />
+    </queries>
 
 </manifest>
 
